--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -196,7 +196,7 @@
                 <div class="leftTitle">
                   <h1 class="h2">
                     {% if subpage_of %}
-                    <a href="{{ subpage_of }}">
+                    <a id="subpage-link" href="{{ subpage_of }}">
                     <span data-feather="arrow-left-circle" class="align-text-center"></span>
                     </a>
                     {% endif %}
@@ -270,11 +270,26 @@
       })()
 
     document.addEventListener('DOMContentLoaded', function() {
+
         var selectElement = document.getElementById('weekday');
-        selectElement.addEventListener('change', function() {
-            var selectedOption = this.value;
-            window.location.href = '?weekday=' + encodeURIComponent(selectedOption);
-        });
+        if (selectElement) {
+            selectElement.addEventListener('change', function() {
+                var selectedOption = this.value;
+                window.location.href = '?weekday=' + encodeURIComponent(selectedOption);
+            });
+        };
+
+        const params = new URLSearchParams(window.location.search);
+        const searchString = params.toString();
+        const subpageLink = document.getElementById('subpage-link');
+
+        console.log(searchString, subpageLink);
+
+        if (searchString) {
+            subpageLink.href += '?' + searchString;
+            console.log(searchString, subpageLink);
+        }
+
     });
 </script>
 </body>
