--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -195,11 +195,7 @@
             <div class="title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
                 <div class="leftTitle">
                   <h1 class="h2">
-                    {% if subpage_of %}
-                    <a id="subpage-link" href="{{ subpage_of }}">
-                    <span data-feather="arrow-left-circle" class="align-text-center"></span>
-                    </a>
-                    {% endif %}
+                    {% block navigation %}{% endblock %}
                     {% block title %}{% endblock %}
                   </h1>
                   {% if modifiedDate %}
@@ -283,11 +279,9 @@
         const searchString = params.toString();
         const subpageLink = document.getElementById('subpage-link');
 
-        console.log(searchString, subpageLink);
 
-        if (searchString) {
+        if (searchString && subpageLink) {
             subpageLink.href += '?' + searchString;
-            console.log(searchString, subpageLink);
         }
 
     });
