--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -9,9 +9,18 @@
     <title>iaroapp</title>
     <link rel="canonical" href="https://app.iaro.co">
     {% load static %}
-    <link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <!--<link href="{% static 'bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">-->
     <link rel="manifest" href="{% static 'manifest.json' %}">
-    <!--<link href="{% static 'css/styles.css' %}" rel="stylesheet">-->
+
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+
+    <!-- Nucleo Icons -->
+    <link href="{% static 'softTheme/css/nucleo-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'softTheme/css/nucleo-svg.css' %}" rel="stylesheet" />
+
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="{% static 'softTheme/css/nucleo-svg.css' %}" rel="stylesheet" />
 
     <!-- CSS Files -->
     <link id="pagestyle" href="{% static 'softTheme/css/soft-ui-dashboard.css' %}" rel="stylesheet" />
@@ -21,27 +30,9 @@
 </head>
 <body class="g-sidenav-show bg-gray-100">
 
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="/">iaroapp</a>
-    <div class="navbar-nav">
-        {% if user.is_superuser %}
-        <div class="nav-item text-nowrap">
-            <a class="nav-link px-3" href="{% url 'admin:index' %}">Admin</a>
-        </div>
-        {% endif %}
-        <div class="nav-item text-nowrap">
-            <form id="logout_form" method="post" action="{% url 'logout' %}">
-                {% csrf_token %}
-            </form>
-            <a class="nav-link px-3" href="#" onclick="document.getElementById('logout_form').submit(); return false;">Sign out <span style="opacity: 0.5;">({{ user }})</span></a>
-        </div>
-    </div>
-    <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse"
-            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-</header>
+    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+        {% include "includes/navigation.html" %}
+    </main>
 
 <div class="container-fluid">
     <div class="row">
@@ -162,9 +153,9 @@
                     <li class="nav-item">
                         {% url 'inventory_evaluation' as inventory_evaluation_url %}
                         {% if request.path == inventory_evaluation_url %}
-                        <a class="nav-link active" href="{% url 'inventory_evaluation' %}">
+                            <a class="nav-link active" href="{% url 'inventory_evaluation' %}">
                         {% else %}
-                        <a class="nav-link" href="{% url 'inventory_evaluation' %}">
+                            <a class="nav-link" href="{% url 'inventory_evaluation' %}">
                         {% endif %}
                             <span data-feather="file-text" class="align-text-bottom"></span>
                             Inventory
@@ -274,6 +265,12 @@
 
 <script src="{% static 'softTheme/js/soft-ui-dashboard.min.js' %}"></script>
 <script src="{% static 'softTheme/js/scripts.js' %}"></script>
+
+<script src="{% static 'softTheme/js/core/popper.min.js' %}"></script>
+<script src="{% static 'softTheme/js/core/bootstrap.min.js' %}"></script>
+<script src="{% static 'softTheme/js/plugins/perfect-scrollbar.min.js' %}"></script>
+<script src="{% static 'softTheme/js/plugins/smooth-scrollbar.min.js' %}"></script>
+<script src="{% static 'softTheme/js/dark-mode-handler.js' %}"></script>
 
 <script lang="javascript">
       (() => {
