--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
-{% block title %}Welcome{% endblock %}
+{% block title %}Welcome, {{ user.get_username }}{% endblock %}
 
 {% block content %}
 
