--- a/inventory/templates/inventory.html
+++ b/inventory/templates/inventory.html
@@ -4,206 +4,206 @@
 
 {% block widgets %}
 <div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    {{ branch }}
-  </button>
-  <ul class="dropdown-menu">
-    {% for branch in branches %}
-    <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
-    {% endfor %}
-  </ul>
+    <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        {{ branch }}
+    </button>
+    <ul class="dropdown-menu">
+        {% for branch in branches %}
+        <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
 
 {% block content %}
 
 <div class="list-group w-auto">
-  <form id="product_form" method="post">
-    {% csrf_token %}
-    {{ formset.management_form }}
-    <div id="accordion">
-    {% for storage in storages %}
-      <div class="card">
-        <div class="card-header">
-          <a class="btn" data-bs-toggle="collapse" href="#inventoryList_{{ storage.id }}">
-            <svg class="bi" width="24" height="24" style="color: {{ storage.color }};">
-              <use xlink:href="#x-circle-fill">
-                <symbol id="x-circle-fill" viewBox="0 0 24 24">
-                  <circle cx="12" cy="12" r="8" />
-                </symbol>
-              </use>
-            </svg>
-            <span>{{ storage.name }}</span>
-          </a>
-        </div>
-        <div id="inventoryList_{{ storage.id }}" class="collapse" data-bs-parent="#accordion">
-          <div class="card-body">
-            {% for form in formset %}
-              {% if storage in form.instance.storages %}
-                <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+    <form id="product_form" method="post">
+        {% csrf_token %}
+        {{ formset.management_form }}
+        <div id="accordion">
+            {% for storage in storages %}
+            <div class="card">
+                <div class="card-header">
+                    <a class="btn" data-bs-toggle="collapse" href="#inventoryList_{{ storage.id }}">
+                        <svg class="bi" width="24" height="24" style="color: {{ storage.color }};">
+                            <use xlink:href="#x-circle-fill">
+                                <symbol id="x-circle-fill" viewBox="0 0 24 24">
+                                    <circle cx="12" cy="12" r="8"/>
+                                </symbol>
+                            </use>
+                        </svg>
+                        <span>{{ storage.name }}</span>
+                    </a>
+                </div>
+                <div id="inventoryList_{{ storage.id }}" class="collapse" data-bs-parent="#accordion">
+                    <div class="card-body">
+                        {% for form in formset %}
+                        {% if storage in form.instance.storages %}
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                   <span style="font-size: 2rem">
                     📦
                   </span>
-                  <div class="d-flex gap-2 w-100 justify-content-between">
-                    <div>
-                      <input type="number" name="product_{{ form.instance.id }}" value="{{ form.instance.id }}" style="display: none;" />
-                      <input type="number" name="storage_{{ storage.id }}" value="{{ storage.id }}" style="display: none;" />
-                      <h6 class="mb-0 wrap">
-                        {{ form.name.value }}
-                      </h6>
-                      <p class="mb-0 opacity-75">
-                      </p>
+                            <div class="d-flex gap-2 w-100 justify-content-between">
+                                <div>
+                                    <input type="number" name="product_{{ form.instance.id }}"
+                                           value="{{ form.instance.id }}" style="display: none;"/>
+                                    <input type="number" name="storage_{{ storage.id }}" value="{{ storage.id }}"
+                                           style="display: none;"/>
+                                    <h6 class="mb-0 wrap">
+                                        {{ form.name.value }}
+                                    </h6>
+                                    <p class="mb-0 opacity-75">
+                                    </p>
+                                </div>
+                                <div style="display: flex; flex-direction: row; gap: 0.5rem;">
+                                    <input name="value_{{ form.instance.id }}_{{ storage.id }}" type="text"
+                                           pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control"
+                                           id="value" value="" style="width: 100px;">
+                                    <small class="opacity-50 text-nowrap truncate">
+                                        {{ form.instance.unit.all | join:", " }}
+                                    </small>
+                                </div>
+                            </div>
+                        </a>
+                        {% endif %}
+                        {% endfor %}
+                        <input type="submit" class="btn btn-primary" value="Submit inventory"/>
                     </div>
-                    <div style="display: flex; flex-direction: row; gap: 0.5rem;">
-                      <input name="value_{{ form.instance.id }}_{{ storage.id }}" type="text" pattern="[0-9]+([.,][0-9]+)?" inputmode="decimal" class="form-control" id="value" value="" style="width: 100px;">
-                      <small class="opacity-50 text-nowrap truncate">
-                        {{ form.instance.unit.all | join:", " }}
-                      </small>
-                    </div>
-                  </div>
-                </a>
-              {% endif %}
+                </div>
+            </div>
             {% endfor %}
-            <input type="submit" class="btn btn-primary" value="Submit inventory" />
-          </div>
         </div>
-      </div>
-    {% endfor %}
+    </form>
+
+    <div class="modal fade" id="submitInventoryModal" tabindex="-1" role="dialog"
+         aria-labelledby="submitInventoryModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="submitInventoryModalLabel">Warning</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Inventory have already been submitted for today. Are you sure you want to update it?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" id="confirmSubmit">Update inventory</button>
+                </div>
+            </div>
+        </div>
     </div>
-  </form>
 
-  <div class="modal fade" id="submitInventoryModal" tabindex="-1" role="dialog" aria-labelledby="submitInventoryModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="submitInventoryModalLabel">Warning</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Inventory have already been submitted for today. Are you sure you want to update it?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" id="confirmSubmit">Update inventory</button>
-        </div>
-      </div>
-    </div>
-  </div>
+    <script>
+        var isSubmittedToday = ('{{ isSubmittedToday | safe }}' === 'True');
 
-<script>
+        /* Submit inventory */
+        function submitForm() {
+          var form = document.querySelector('#product_form');
+          form.submit()
+        }
 
-  var isSubmittedToday = ('{{ isSubmittedToday | safe }}' === 'True');
+        document.addEventListener("DOMContentLoaded", function() {
 
-  /* Submit inventory */
-  function submitForm() {
-    var form = document.querySelector('#product_form');
-    form.submit()
-  }
+          var elements = document.querySelectorAll('.collapse');
+          elements.forEach(function(element) {
+            element.addEventListener('shown.bs.collapse', function (event) {
+              var triggeredElement = event.currentTarget;
+              var parentElement = triggeredElement.parentNode;
+              var rect = parentElement.getBoundingClientRect();
+              var header = document.querySelector('nav');
+              var headerHeight = header.offsetHeight;
+              var scrollPosition = window.pageYOffset + rect.top - headerHeight - 5;
+              window.scrollTo({
+                top: scrollPosition,
+                behavior: 'smooth'
+              });
+            });
+          });
 
-  document.addEventListener("DOMContentLoaded", function() {
+          var submitInventoryModal = new bootstrap.Modal(document.getElementById("submitInventoryModal"), {});
 
-    var elements = document.querySelectorAll('.collapse');
-    elements.forEach(function(element) {
-      element.addEventListener('shown.bs.collapse', function (event) {
-        var triggeredElement = event.currentTarget;
-        var parentElement = triggeredElement.parentNode;
-        var rect = parentElement.getBoundingClientRect();
-        var header = document.querySelector('nav');
-        var headerHeight = header.offsetHeight;
-        var scrollPosition = window.pageYOffset + rect.top - headerHeight - 5;
-        window.scrollTo({
-          top: scrollPosition,
-          behavior: 'smooth'
-        });
-      });
-    });
-
-    var submitInventoryModal = new bootstrap.Modal(document.getElementById("submitInventoryModal"), {});
-
-    document.getElementById('confirmSubmit').onclick = function() {
-      submitForm();
-      submitInventoryModal.hide();
-    }
-
-    document.getElementById('product_form').onsubmit = function (evt) {
-
-      evt.preventDefault();
-
-      if (isSubmittedToday) {
-        submitInventoryModal.show();
-      } else {
-        submitForm();
-      }
-
-    }
-
-    // Colorize fields as "done" for which a value is supplied
-    let items = document.querySelectorAll("a.list-group-item");
-    items.forEach(item => {
-      let input = item.querySelector("input[name='value']");
-      if (input !== null) {
-        input.addEventListener("input", function() {
-          if (input.value && input.checkValidity()) {
-            item.classList.add('done');
-          } else {
-            item.classList.remove('done');
+          document.getElementById('confirmSubmit').onclick = function() {
+            submitForm();
+            submitInventoryModal.hide();
           }
+
+          document.getElementById('product_form').onsubmit = function (evt) {
+
+            evt.preventDefault();
+
+            if (isSubmittedToday) {
+              submitInventoryModal.show();
+            } else {
+              submitForm();
+            }
+
+          }
+
+          // Colorize fields as "done" for which a value is supplied
+          let items = document.querySelectorAll("a.list-group-item");
+          items.forEach(item => {
+            let input = item.querySelector("input[name='value']");
+            if (input !== null) {
+              input.addEventListener("input", function() {
+                if (input.value && input.checkValidity()) {
+                  item.classList.add('done');
+                } else {
+                  item.classList.remove('done');
+                }
+              });
+            }
+          });
+
         });
-      }
-    });
+    </script>
 
-  });
-</script>
+    <style>
 
-<style>
+        .truncate {
+          width: 30px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ".";
+          font-size: 1rem;
+        }
+        .wrap {
+          overflow-wrap: anywhere;
+        }
+        .form-control:invalid {
+          color: navy;
+          outline: none;
+          border-color: #ff1050;
+          box-shadow: 0 0 10px #ff0000;
+        }
+        .done {
+          background-color: rgb(209, 231, 221);
+        }
 
-  .truncate {
-    width: 30px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ".";
-    font-size: 1rem;
-  }
-  .wrap {
-    overflow-wrap: anywhere;
-  }
-  .form-control:invalid {
-    color: navy;
-    outline: none;
-    border-color: #ff1050;
-    box-shadow: 0 0 10px #ff0000;
-  }
-  .done {
-    background-color: rgb(209, 231, 221);
-  }
+        .list-group-item-action:focus, .list-group-item-action:hover {
+          background-color: lightblue !important;
+        }
 
-  .list-group-item-action:focus, .list-group-item-action:hover {
-    background-color: lightblue !important;
-  }
+        input[type=submit] {
+          margin: .75rem;
+          align-self: end;
 
-  input[type=submit] {
-    margin: .75rem;
-    align-self: end;
+        }
+        a.btn {
+          display: flex;
+          padding-left: 0px;
+          text-align: left;
+        }
+        .card {
+          margin: .5rem 0;
+        }
+        .card-body {
+          padding: 0px;
+          display: flex;
+          flex-direction: column;
+        }
 
-  }
-  svg {
-    margin-right: .3rem;
-    min-width: 24px;
-  }
-  a.btn {
-    display: flex;
-    padding-left: 0px;
-    text-align: left;
-  }
-  .card {
-    margin: .5rem 0;
-  }
-  .card-body {
-    padding: 0px;
-    display: flex;
-    flex-direction: column;
-  }
+    </style>
 
-</style>
-
-{% endblock %}
+    {% endblock %}
