--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -31,7 +31,7 @@
 <body class="g-sidenav-show bg-gray-100">
 
 {% include "includes/sidebar.html" %}
-<main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+<main class="main-content position-relative h-100 border-radius-lg ">
     {% include "includes/navigation.html" %}
 
     <div class="container-fluid px-4">
