--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -65,7 +65,7 @@
         {% endfor %}
         {% endif %}
 
-        <div class="container-fluid py-4 px-4">
+        <div class="container-fluid py-4">
             {% block content %}{% endblock %}
         </div>
     </div>
