redesign: tasks page

--- a/iaroapp/templates/includes/sidebar.html
+++ b/iaroapp/templates/includes/sidebar.html
@@ -15,7 +15,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if '/' == request.path %} active {% endif %} " href=" {% url 'index' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="home" class="align-text-bottom"></span>
                     </div>
                     <span class="nav-link-text ms-1">Dashboard</span>
@@ -24,7 +24,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if '/tasks/' == request.path %} active {% endif %} " href=" {% url 'tasks' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="check-square" class="align-text-bottom"></span>
                     </div>
                     <span class="nav-link-text ms-1">Tasks</span>
@@ -34,7 +34,7 @@
             {% if showOpening == True %}
                 <li class="nav-item">
                     <a class="nav-link {% if '/procedures/opening' == request.path %} active {% endif %} " href=" {% url 'opening' %}">
-                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                             <span data-feather="sunrise" class="align-text-bottom"></span>
                         </div>
                         <span class="nav-link-text ms-1">Store Opening</span>
@@ -43,7 +43,7 @@
             {% else %}
                 <li class="nav-item">
                     <a class="nav-link {% if '/procedures/closing' == request.path %} active {% endif %} " href=" {% url 'closing' %}">
-                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                             <span data-feather="sunset" class="align-text-bottom"></span>
                         </div>
                         <span class="nav-link-text ms-1">Store Closing</span>
@@ -53,7 +53,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if '/inventory/packaging' == request.path %} active {% endif %} " href=" {% url 'inventory_packaging' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="package" class="align-text-bottom"></span>
                     </div>
                     <span class="nav-link-text ms-1">Packaging</span>
@@ -62,7 +62,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if '/tasks/baking' == request.path %} active {% endif %} " href=" {% url 'tasks_baking' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="trello" class="align-text-bottom"></span>
                     </div>
                     <span class="nav-link-text ms-1">Baking plan</span>
@@ -71,7 +71,7 @@
 
             <li class="nav-item">
                 <a class="nav-link {% if '/inventory/populate' == request.path %} active {% endif %} " href=" {% url 'inventory_populate' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                         <span data-feather="layers" class="align-text-bottom"></span>
                     </div>
                     <span class="nav-link-text ms-1">Inventory</span>
@@ -87,7 +87,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link {% if '/inventory/shopping' == request.path %} active {% endif %} " href=" {% url 'inventory_shopping' %}">
-                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                        <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                             <span data-feather="file-text" class="align-text-bottom"></span>
                         </div>
                         <span class="nav-link-text ms-1">Shopping list</span>
@@ -97,7 +97,7 @@
                 {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link {% if '/inventory/evaluation' == request.path %} active {% endif %} " href=" {% url 'inventory_evaluation' %}">
-                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
                             <span class="nav-link-text ms-1">Inventory</span>
@@ -106,7 +106,7 @@
 
                     <li class="nav-item">
                         <a class="nav-link {% if '/tasks/evaluation' == request.path %} active {% endif %} " href=" {% url 'tasks_evaluation' %}">
-                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
                             <span class="nav-link-text ms-1">Tasks</span>
@@ -115,7 +115,7 @@
 
                     <li class="nav-item">
                         <a class="nav-link {% if '/ratings/evaluation' == request.path %} active {% endif %} " href=" {% url 'ratings_evaluation' %}">
-                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center">
+                            <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center me-2 d-flex align-items-center justify-content-center" style="padding: 8px">
                                 <span data-feather="file-text" class="align-text-bottom"></span>
                             </div>
                             <span class="nav-link-text ms-1">Ratings</span>
